<resources>
    <string name="app_name">26August</string>
    <string name="menu_refresh">Refresh</string>
    <string name="worker_activity">Worker Activity</string>
    <string name="start_worker">Start Worker</string>
    <string name="stop_worker">Stop Worker</string>
    <string name="start_workerchaining">Start Worker Chaining</string>
    <string name="stop_workerchaining">Stop Worker Chaining</string>
    <string name="content_image">Image..</string>
</resources>