<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WorkerActivity">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_start_worker"
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:text="@string/start_worker" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_stop_worker"
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:text="@string/stop_worker" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_start_workerchaining"
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:text="@string/start_workerchaining" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_stop_workerchaining"
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:text="@string/stop_workerchaining" />


        <com.example.a26august.CustomViews.FirstCustomView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:image="@mipmap/ic_launcher"
            app:text="@string/content_image"
            />

    </LinearLayout>
</layout>